src/objects/DRL_Template_Item__c.object
<CustomObject>
    <description>This is the template for the DRL.</description>
    <fields>
        <fullName>DRL_Template_Number_Map__c</fullName>
        <caseSensitive>true</caseSensitive>
        <defaultValue>&quot;DRL-XXXX&quot;</defaultValue>
        <description>Describes the DRL_Template_Number_Map custom field.</description>
        <inlineHelpText>Example: DRL-0060</inlineHelpText>
        <label>DRL Template Number Map</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Include_if_True_Logic__c</fullName>
        <label>Include if True Logic</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <inlineHelpText>The Item number will help sort the list.  1.1 or 1.A</inlineHelpText>
        <label>Item</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_and_Comments__c</fullName>
        <inlineHelpText>This should be helpful text to aid the property owner know what we are looking for.</inlineHelpText>
        <label>Notes and Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <inlineHelpText>This is the who is responsible for getting the document.</inlineHelpText>
        <label>Responsible Party</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Responsible_Party</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Document_Stage</valueSetName>
        </valueSet>
    </fields>
    <label>DRL Template Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DRL_Template_Number_Map__c</columns>
        <columns>Stage__c</columns>
        <columns>Item__c</columns>
        <columns>Document_Name__c</columns>
        <columns>Responsible_Party__c</columns>
        <columns>Notes_and_Comments__c</columns>
        <columns>Include_if_True_Logic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DRL-{0000}</displayFormat>
        <label>DRL Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRL Template Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>